security/kyverno/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
  namespace: prod
spec:
  containers:
    - name: app
      image: docker.io/library/nginx:alpine
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      resources:
        limits:
          cpu: "500m"
          memory: "128Mi"
        requests:
          cpu: "250m"
          memory: "64Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
  namespace: prod
spec:
  containers:
    - name: app
      image: docker.io/library/nginx:alpine
      securityContext:
        runAsNonRoot: false
      resources:
        limits:
          cpu: "500m"
          memory: "128Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: no-limits-pod
  namespace: prod
spec:
  containers:
    - name: app
      image: docker.io/library/nginx:alpine
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-registry-pod
  namespace: prod
spec:
  containers:
    - name: app
      image: docker.io/randomuser/malicious:latest
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      resources:
        limits:
          cpu: "500m"
          memory: "128Mi"
